@@ -1,0 +1,9 @@
+;vicidial.conf
+[Database]
+VARDB_server=
+VARDB_database=
+VARDB_user=
+VARDB_pass=
+VARDB_custom_user=
+VARDB_custom_pass=
+VARDB_port=
